[gd_scene load_steps=3 format=3 uid="uid://bf5ohloxpc45q"]

[ext_resource type="Theme" uid="uid://cymbtmi8h011n" path="res://themes/menu_theme.tres" id="1_6une2"]
[ext_resource type="Script" path="res://menus/settings_menu.gd" id="2_1ngp1"]

[node name="settings_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6une2")
script = ExtResource("2_1ngp1")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="delete_save_button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Delete Save"

[node name="confirm_delete_menu" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="confirm_delete_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="CenterContainer" type="CenterContainer" parent="confirm_delete_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="confirm_delete_menu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="confirm_delete_label" type="Label" parent="confirm_delete_menu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Are you sure you want to delete this save?"

[node name="HBoxContainer" type="HBoxContainer" parent="confirm_delete_menu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="cancel_button" type="Button" parent="confirm_delete_menu/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(275, 81)
layout_mode = 2
text = "Cancel"

[node name="confirm_button" type="Button" parent="confirm_delete_menu/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(275, 81)
layout_mode = 2
text = "Confirm"

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 188.0
offset_bottom = 113.0
text = "Back"

[connection signal="pressed" from="CenterContainer/VBoxContainer/delete_save_button" to="." method="_on_delete_save_button_pressed"]
[connection signal="pressed" from="confirm_delete_menu/CenterContainer/VBoxContainer/HBoxContainer/cancel_button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="confirm_delete_menu/CenterContainer/VBoxContainer/HBoxContainer/confirm_button" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
